[package]
name = "kaffeeshare-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
axum = "0.7.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
